# KBO_playwright

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.playwright  GEMINI.md  IMPLEMENTATION_SUMMARY.md  PLAYER_BASIC_FINAL_SUMMARY.md  PLAYER_NAME_FIX_SUMMARY.md  README.md  SCHEDULER_USAGE.md  WORKFLOW_COMPLETE.md  _refactor_steps.py  _step_functions.py  analyze_futures_html.py  apply_migration_015.py  apply_migration_016.py  apply_migration_017.py  apply_migration_018.py  audit_results.txt  capture_profile.py  check_2025_status.py  check_constraints.py  check_crawl_progress.sh  check_db_schema.py  check_filters.py  check_game_schema.py  check_header_mapping.py  check_id_exists.py  check_locks.py  check_max_id.py  check_mismatch.py  check_missing_teams.py  check_oci_duplicates.py  check_oci_player.py  check_oci_schema.py  check_seasons.py  (+120 more)
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: advanced_daily_sync.yml  backfill.yml  backfill_advanced_stats.yml  backfill_missed_crawls.yml  backfill_player_game_stats.yml  backfill_player_ids.yml  backfill_roster.yml  backfill_season_team_codes.yml  backfill_sh_sf.yml  daily_kbo_sync.yml  daily_preview.yml  docker_build.yml  full_recalculation.yml  kbo_automation.yml  kbo_smart_polling.yml  live_refresh.yml  periodic_extras.yml  pitcher_backfill.yml  quality_check.yml  security_audit.yml  test_suite.yml  text_relay_docker.yml  weekly_maintenance.yml
.opencode/plans/: backfill_work_plan.md  ci_cd_update.md  coverage_improvement_plan.md  fix_boxscore_timeout_live_games.md  phase3_medium_modules.md  scheduler_update.md  unified_audit_integration.md
Docs/: AI_VIEW_GUIDE.md  BACKLOG.md  CI_CD_PIPELINE.md  COMMAND_REFERENCE.md  CONTRIBUTING.md  CRAWLING_LIMITATIONS.md  DAILY_UPDATE.md  FALLBACK_SYSTEM.md  PLAYERID_CRAWLING.md  Progress.md  Progress_OLD.md  ProjectOverview.md  Retirement_Inactive_Player_Crawling_ Plan.md  Retirement_Inactive_Player_Crawling_Plan.md  SUPABASE_SETUP.md  Season_ Game_Data_ Crawling_ Plan.md  TESTING_GUIDE.md  TEST_PLAN.md  URL_REFERENCE.md  architecture.md  box_score.csv  data_crawlability_matrix.md  game_schema_alignment.md  quality_gate_baseline.json  source_registry_noise_report_20260607.md  teams (구단 정보).csv  zero_issue_runbook_oci.md
Docs/archives/: BACKLOG.md  DATA_INTEGRITY_LOG.md  kbo_crawGuid.md  projectOverviewGuid.md
Docs/baseball/: kbo_metrics_explained.md  kbo_stadium_food.md
Docs/oci_metadata/: db_schema_metadata.csv  table_content_kbo_seasons.csv  table_content_teams.csv
Docs/plans/: 2026-06-14-crawler-quality-tools.md  Player_Profile_Parsing_ Plan.md  Retirement_Inactive_Player_Crawling_Plan.md  Season_ Game_Data_ Crawling_ Plan.md  auto_remediation_plan.md  pbp_speed_stability_improvement_plan.md  team_data_quality_improvement_plan.md  team_schema_optimization_plan.md  team_stats_fallback_plan.md
Docs/references/: API_EXAMPLES.md  COMMAND_REFERENCE.md  CRAWLING_LIMITATIONS.md  blocked_sources.md  (+5 more)
data/: game_20251001NCLG0.json  game_status_overrides.csv  kbo_dev.db  kbo_dev.db-shm  kbo_dev.db-wal  player_id_overrides.csv  player_id_row_overrides.csv
docker/: entrypoint.sh
kbo_playwright.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
local_metadata/: db_schema_metadata.csv
logs/: backfill_2020_2024.out  scheduler.out
migrations/: 015_datasource_ticket_sources.py  add_player_basic_birth_date_index.py  add_player_basic_profile_fields.py  add_player_basic_profile_fields_oci.py  add_player_basic_timestamps.py  add_player_parsed_profile_fields.py  add_players_extended_fields.py
reports/: integrity_report_20260520_211451.md
scratch/: batch_repair_2025.py  cleanup_corrupted_games.py  cleanup_db.py  clear_stubs.py  crawl_one.py  flawless_crawl_list.txt  migrate_oci_players.py  page_ids.txt  recover_april_games.py  recover_missing_games.py  regen_march.py  repair_target_dates.py  reyes_2025_all.txt  search_db.py  seed_ids.txt  stub_ids.txt  test_kim_do_yeong.py
scripts/: README.md  __init__.py  analyze_futures_html.py  backfill_2025_context.py  backfill_birthdates.py  backfill_player_profiles.py  batch_parse_snapshots.py  benchmark_oci_sync.py  bulk_recalc_team_stats.py  check_all_teams_catcher.py  check_catcher_columns.py  check_fielding_oci.py  check_filters.py  check_local_summary.py  check_oci_summary.py  check_other_positions.py  check_p1p2_lock_health.py  check_pitcher_pos.py  check_schedule_2009.py  check_schedule_boundary.py  check_team_catcher.py  check_team_pos_catcher.py  cleanup_corrupted_stats.py  convert_print_to_logger.py  crawl_2002_2009_stats.py  crawl_2009_game_details.py  debug_oci.py  debug_samsung_catcher.py  debug_schedule_2009.py  debug_schedule_2009_click.py  debug_schedule_2010.py  diagnose_scheduler_locks.py  dump_defense_html.py  fast_sync_stats.py  fetch_kbo_pbp.py  find_catcher_link.py  fix_bare_except.py  fix_lotte_code.py  generate_docstrings.py  historical_analysis.py  (+24 more)
snapshots/: basic1_2024_regular.html  basic2_2024_regular.html
src/: __init__.py  constants.py  urls.py
tests/: analyze_all_tables.py  analyze_futures_html.py  check_db_schema.py  check_filters.py  check_futures_data.py  check_total_count.py  conftest.py  debug_basic1_structure.py  debug_basic2_headers.py  debug_exhibition_structure.py  debug_futures.py  debug_futures_html.py  debug_hitter_tables.py  debug_pagination.py  debug_relay_content.py  debug_relay_simple.py  debug_relay_structure.py  debug_retired_parser.py  debug_selectors.py  mock_cap.csv  mock_cap_gap.csv  poc_test.py  test_alerting_gap_types.py  test_apply_player_id_overrides.py  test_audit_alerts.py  test_audit_backup.py  test_audit_remediation.py  test_auto_healer.py  test_backfill_birthdates.py  test_backfill_missing_game_details.py  test_backfill_missing_players.py  test_backfill_phases.py  test_backfill_player_ids.py  test_backfill_pregame_previews.py  test_backfill_starting_pitchers_from_stats.py  test_basic2_headers.py  test_broadcast_crawler.py  test_check_data_status.py  test_check_orphan_data.py  test_coach_analysis_smoke.py  (+192 more)
(+1560 files in other folders)
