[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "kbo-playwright"
version = "1.0.0"
description = "Korean Baseball Organization (KBO) data collection system using Playwright"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "anomalyco"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "playwright>=1.60",
    "beautifulsoup4>=4.12.3",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.5.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["scripts/investigations/"]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort
    "UP",      # pyupgrade (Python 3.10+)
    "RET",     # flake8-return
    "ANN001",  # missing-type-function-argument
    "ANN002",  # missing-type-args
    "ANN003",  # missing-type-kwargs
    "ANN202",  # missing-return-type-private-function
    "ANN205",  # missing-return-type-static-method
    "ANN201",  # missing-return-type-public-function
    "ANN204",  # missing-return-type-special-method
    "ANN206",  # missing-return-type-class-method
    "ANN401",  # dynamically typed expressions (Any)
    "TC001",   # typing-only-first-party-import
    "TC002",   # typing-only-third-party-import
    "TC003",   # typing-only-standard-library-import
    "TRY003",  # raise-vanilla-args
    "TRY004",  # type-check-without-type-error
    "TRY201",  # verbose-raise
    "TRY301",  # raise-within-try
    "TRY300",  # try-consider-else
    "TRY400",  # error-instead-of-exception
    "TRY401",  # verbose-log-message
    "B",       # flake8-bugbear (limited)
    "SIM",     # flake8-simplify (limited)
    "G",       # logging (f-strings, format, exc_info)
    "BLE",     # flake8-blind-except
    "RUF100",  # unused noqa
    "RUF005",  # collection literal concatenation
    "RUF017",  # avoid-six
    "RUF022",  # unsorted-dunder-all
    "RUF015",  # unnecessary-iterable-allocation-for-first-element
    "RUF046",  # unnecessary-cast-to-int
    "RUF059",  # unused-unpacked-variable
    "EM101",   # raw-string-in-exception
    "PYI034",  # non-self-return-type
    "PERF401",  # manual list comprehension
    "PT",      # pytest style
    "PTH",     # pathlib (os.path 대체)
    "ARG",     # unused-function-argument
    "T20",     # print / pdb
    "FURB167", # regex-flag-alias
    "RUF013",  # implicit-optional
    "DTZ005",  # datetime-now-without-tz
    "S608",    # hardcoded-sql-expression
    "N",       # pep8-naming
    "FLY002",  # f-string instead of string join
    "RSE",     # redundant-exception (bare Exception)
    "PIE",     # flake8-pie (miscellaneous simplifications)
    "YTT",     # sys.version checks
    "SLF001",  # private-member-access (intentional internal access noqa'd)
    "PLR0913", # too-many-arguments
    "PLR0912", # too-many-branches
    "PLR0915", # too-many-statements
    "PLR0911", # too-many-return-statements
    "PLR5501", # if-stmt-min-max
    "ISC",     # implicit-string-concatenation
    "PGH",     # pygrep-hooks
    "FURB132", # for-loop-with-temporary-variable
    "RUF024",  # non-unique-dunder-all
    "RUF040",  # non-unique-dunder-slots
    "RUF012",  # mutable-class-default
    "PLW0603", # global-statement
    "PLW0127", # self-assigning-variable
    "S501",    # request-with-no-cert-validation
    "S311",    # suspicious-non-cryptographic-random-usage
    "S310",    # suspicious-url-open-usage
    "S603",    # subprocess-without-shell-equals-true
    "ASYNC109", # async-function-with-timeout
    "ASYNC212", # blocking-http-call-httpx-in-async-function
    "ASYNC240", # blocking-path-method-in-async-function
    "FURB110", # if-exp-instead-of-or-operator
    "RUF021",   # parenthesize-chained-operators
    "RUF019",   # unnecessary-key-check
]
ignore = [
    "E402",    # module-import-not-at-top (lazy imports intentional)
    "E501",    # line-too-long (handled by formatter)
    "E701",    # multiple-statements-on-one-line-colon (legacy style)
    "E702",    # multiple-statements-on-one-line-semicolon
    "E731",    # lambda assignment (permissive)
    "UP035",   # deprecated typing (Dict→dict etc — too many existing)
    "B023",    # function-uses-loop-variable (common closure pattern)
    "SIM102",  # collapsible-if (readability preference)
    "SIM108",  # simplify-if-else (ternary, not always clearer)
    "SIM113",  # enumerate-for-loop (manual counter ok)
    "COM812",  # handled by formatter (conflicts with ruff format)
    "G010",    # logging-warn vs logging-warning (redundant alias)
    "G004",    # logging-f-string (f-strings in logging intentional post print→logger conversion)
    "G101",    # logging-extra-attr (extra kwargs pattern is intentional)
    "PLR0911", # too-many-return-statements (pragmatic ignore for existing baseline)
]

[tool.ruff.lint.per-file-ignores]
"src/models/**" = ["TC001", "TC002", "TC003", "PLR0913"]
"src/crawlers/base_naver_crawler.py" = ["ASYNC212", "RUF012"]
"src/crawlers/foreign_player_crawler.py" = ["RUF012"]
"src/crawlers/injury_crawler.py" = ["RUF012"]
"src/crawlers/manager_change_crawler.py" = ["RUF012"]
"src/crawlers/preview_crawler.py" = ["RUF012"]
"src/crawlers/ticket_crawler.py" = ["RUF012", "S501"]
"src/crawlers/game_mvp_crawler.py" = ["ASYNC212"]
"src/crawlers/game_detail_crawler.py" = ["ASYNC240"]
"src/crawlers/player_search_crawler.py" = ["ASYNC109"]
"src/crawlers/relay_crawler.py" = ["ASYNC109"]
"src/crawlers/schedule_crawler.py" = ["ASYNC109"]
"src/repositories/player_repository.py" = ["RUF012"]
"src/repositories/player_season_pitching_repository.py" = ["PLW0603"]
"src/repositories/safe_batting_repository.py" = ["PLW0603"]
"src/utils/team_mapping.py" = ["PLW0603"]
"src/utils/request_policy.py" = ["S311"]
"src/utils/throttle.py" = ["S311"]
"src/utils/alerting.py" = ["S310"]
"src/utils/compliance.py" = ["ASYNC240"]
"src/utils/lock.py" = ["PLW0127"]
"src/sources/relay/base.py" = ["PLW0127"]
"src/sources/relay/orchestrator.py" = ["PLW0127"]
"src/monitoring/sla_tracker.py" = ["PLW0127"]
"src/sync/runtime_hydrator.py" = ["RUF012"]
"src/sources/relay/circuit_breaker.py" = ["RUF012"]
"src/cli/retry_daily_failures.py" = ["S603"]
"src/cli/run_daily_update.py" = ["S603"]
"src/cli/run_periodic_extras.py" = ["S603"]
"src/cli/run_all_crawlers.py" = ["ASYNC240"]
"tests/**" = ["FBT001", "FBT002", "TC001", "TC002", "TC003", "SIM102", "SIM105", "SIM108", "SIM113", "SIM117", "PT", "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ANN401", "TRY003", "TRY300", "TRY301", "ARG", "T201", "T20", "FURB167", "RUF013", "DTZ005", "S608", "FLY002", "N", "SLF001", "PLR0913", "PLR0915", "FURB132", "RUF024", "RUF040", "PERF401", "BLE001", "F401", "I001", "RUF015", "RUF046", "RUF059", "EM101", "PYI034", "RUF012", "PLW0603", "PLW0127", "S501", "S311", "S310", "S603", "ASYNC109", "ASYNC212", "ASYNC240", "FURB110"]
"scripts/**" = ["FBT001", "FBT002", "TC001", "TC002", "TC003", "SIM102", "SIM108", "SIM113", "PT", "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ANN401", "TRY003", "TRY300", "ARG", "T20", "FURB167", "RUF013", "DTZ005", "S608", "N", "SLF001", "PLR0913", "PLR0912", "PLR0911", "PLR0915", "FURB132", "RUF024", "RUF040", "BLE001", "RUF015", "RUF046", "RUF059", "EM101", "PYI034", "RUF012", "PLW0603", "PLW0127", "S501", "S311", "S310", "S603", "ASYNC109", "ASYNC212", "ASYNC240", "FURB110"]
"migrations/**" = ["FBT001", "FBT002", "TC001", "TC002", "TC003", "SIM102", "SIM108", "SIM113", "PT", "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ANN401", "TRY003", "TRY300", "ARG", "T20", "T201", "FURB167", "RUF013", "DTZ005", "S608", "N", "SLF001", "PLR0913", "PLR0912", "PLR0911", "PLR0915", "FURB132", "RUF024", "RUF040", "BLE001"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_empty = true
exclude_also = [
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pragma: no cover",
]
