[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "kbo-playwright"
version = "1.0.0"
description = "Korean Baseball Organization (KBO) data collection system using Playwright"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "anomalyco"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "playwright>=1.60",
    "beautifulsoup4>=4.12.3",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.5.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["scripts/investigations/"]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort
    "UP",      # pyupgrade (Python 3.10+)
    "RET",     # flake8-return
    "ANN001",  # missing-type-function-argument
    "ANN002",  # missing-type-args
    "ANN003",  # missing-type-kwargs
    "ANN202",  # missing-return-type-private-function
    "ANN205",  # missing-return-type-static-method
    "ANN201",  # missing-return-type-public-function
    "ANN204",  # missing-return-type-special-method
    "ANN206",  # missing-return-type-class-method
    "ANN401",  # dynamically typed expressions (Any)
    "TC001",   # typing-only-first-party-import
    "TC002",   # typing-only-third-party-import
    "TC003",   # typing-only-standard-library-import
    "TRY003",  # raise-vanilla-args
    "TRY004",  # type-check-without-type-error
    "TRY201",  # verbose-raise
    "TRY301",  # raise-within-try
    "TRY300",  # try-consider-else
    "TRY400",  # error-instead-of-exception
    "TRY401",  # verbose-log-message
    "B",       # flake8-bugbear (limited)
    "SIM",     # flake8-simplify (limited)
    "G",       # logging (f-strings, format, exc_info)
    "BLE",     # flake8-blind-except
    "RUF100",  # unused noqa
    "RUF005",  # collection literal concatenation
    "RUF006",  # asyncio-dangling-task
    "RUF017",  # avoid-six
    "RUF022",  # unsorted-dunder-all
    "RUF015",  # unnecessary-iterable-allocation-for-first-element
    "RUF046",  # unnecessary-cast-to-int
    "RUF059",  # unused-unpacked-variable
    "EM101",   # raw-string-in-exception
    "PYI034",  # non-self-return-type
    "PERF401",  # manual list comprehension
    "PT",      # pytest style
    "PTH",     # pathlib (os.path 대체)
    "ARG",     # unused-function-argument
    "T20",     # print / pdb
    "FLY002",  # static-format-to-fstring
    "FURB167", # regex-flag-alias
    "RUF013",  # implicit-optional
    "DTZ001",  # call-date-from-datetime-without-tz
    "DTZ003",  # datetime-combine-without-tz
    "DTZ005",  # datetime-now-without-tz
    "DTZ007",  # call-datetime-strptime-without-zone
    "DTZ011",  # call-date-today
    "S608",    # hardcoded-sql-expression
    "N",       # pep8-naming
    "FBT001",  # boolean-type-hint-positional-argument
    "FBT002",  # boolean-default-value-positional-argument
    "RSE",     # redundant-exception (bare Exception)
    "PIE",     # flake8-pie (miscellaneous simplifications)
    "YTT",     # sys.version checks
    "SLF001",  # private-member-access (intentional internal access noqa'd)
    "PLR0913", # too-many-arguments
    "PLR0912", # too-many-branches
    "PLR0915", # too-many-statements
    "PLR0911", # too-many-return-statements
    "PLR5501", # if-stmt-min-max
    "ISC",     # implicit-string-concatenation
    "PGH",     # pygrep-hooks
    "FURB132", # for-loop-with-temporary-variable
    "RUF024",  # non-unique-dunder-all
    "RUF040",  # non-unique-dunder-slots
    "RUF012",  # mutable-class-default
    "PLW0603", # global-statement
    "PLW0127", # self-assigning-variable
    "S501",    # request-with-no-cert-validation
    "S311",    # suspicious-non-cryptographic-random-usage
    "S310",    # suspicious-url-open-usage
    "S603",    # subprocess-without-shell-equals-true
    "ASYNC109", # async-function-with-timeout
    "ASYNC212", # blocking-http-call-httpx-in-async-function
    "ASYNC240", # blocking-path-method-in-async-function
    "FURB110", # if-exp-instead-of-or-operator
    "FURB171", # single-item-membership-test
    "FURB162", # fromisoformat-replace-z
    "Q000",    # bad-quotes-inline-string
    "D403",    # first-word-uncapitalized-docstring
    "D105",    # undocumented-magic-method
    "B904",    # raise-from-inside-except
    "COM818",  # trailing-comma-on-bare-tuple
    "N802",    # invalid-function-name
    "N803",    # invalid-argument-name
    "N807",    # dunder-function-name
    "N815",    # invalid-variable-name
    "N816",    # mixed-case-variable-in-class-scope
    "N818",    # invalid-class-name
    "RSE102",  # unnecessary-paren-on-raise-exception
    "RUF012",  # mutable-class-default
    "SIM101",  # collapsible-if-elif
    "PLC0206", # dict-index-missing-items
    "RUF028",  # unnecessary-f-string
    "RUF033",  # unnecessary-round
    "RUF034",  # unnecessary-int-f-string
    "RUF037",  # unnecessary-backslash-escape
    "RUF041",  # unnecessary-assignment-before-return
    "RUF041",  # unnecessary-assignment-in-del
    "RUF043",  # unnecessary-assignment-to-same-variable
    "RUF048",  # unnecessary-list-cast
    "RUF049",  # unnecessary-dict-cast
    "FURB157", # verbose-decorator-constructor
    "FURB188", # slice-to-remove-prefix-or-suffix
     "PYI055",  # unnecessary-type-union
     "PYI",      # flake8-pyi (all stub rules; tests/scripts per-file-ignored)
    "FBT003",  # boolean-positional-value-in-call
    "ASYNC221", # run-process-in-async-function
    "ASYNC230", # blocking-open-call-in-async-function
    "FURB161", # bit-count
    "FURB177", # implicit-cwd
    "A002",    # builtin-argument-shadowing
    "A004",    # builtin-import-shadowing
     "S324",    # hashlib-insecure-hash-function
     "S101",    # assert
     "S102",    # exec
     "S104",    # hardcoded-bind-all-interfaces
     "S108",    # hardcoded-temp-file
     "S110",    # try-except-pass
     "S112",    # bare-except
     "S113",    # request-without-timeout
    "TC004",   # runtime-import-in-type-checking-block
    "D202",    # blank-line-after-function
    "TID252",  # relative-imports
      "RUF001",  # ambiguous-unicode-character
      "RUF002",  # ambiguous-unicode-character-docstring
      "RUF003",  # ambiguous-unicode-character-comment
      "RUF021",   # parenthesize-chained-operators
     "ERA001",  # commented-out-code
     "RUF019",   # unnecessary-key-check
      "C4",       # flake8-comprehensions
      "COM812",   # missing-trailing-comma
      "T10",      # debugger
     "PLC0208",  # unnecessary-else-after-return
     "PLW0245",  # super-without-brackets
     "PLW1509",  # subprocess-popen-preexec-fn
      "B026",     # star-args-unpacked-after-keyword-arg
       "D213",    # multi-line-summary-second-line
      "D100",    # undocumented-public-module
      "D102",    # undocumented-public-method
      "D103",    # undocumented-public-function
      "D104",    # undocumented-public-package
      "D106",    # undocumented-public-nested-class
      "D209",    # multi-line-docstring-closing-quotes
      "D210",    # around-docstring-whitespace
      "D300",    # double-quote-docstring
      "D301",    # raw-string-on-docstring
      "D402",    # docstring-should-be-empty
      "D404",    # docstring-first-word
      "D405",    # docstring-section-name
      "D406",    # docstring-section-under-line
      "D407",    # docstring-section-name-after-content
      "D408",    # docstring-section-name-underline-after-name
      "D409",    # return-type-mismatch
      "D410",    # docstring-blank-line-after-section
      "D411",    # docstring-blank-line-before-section
      "D412",    # docstring-blank-lines-between-sections
      "D413",    # missing-blank-line-after-last-section
      "D414",    # docstring-empty-section
      "D416",    # docstring-section-name-ends-with-colon
      "D418",    # docstring-omit-name-body
      "D419",    # docstring-empty
       "D400",    # missing-trailing-period
       "D415",    # missing-terminal-punctuation
        "RUF007",  # pairwise-over-zipped
       "RUF008",  # mutable-class-default-dataclass
       "RUF009",  # function-call-in-dataclass-default-arg
       "RUF016",  # redundant-string-concatenation
       "RUF018",  # assignment-in-assert
       "RUF020",  # explicit-f-string-type-conversion
      "RUF023",  # unsorted-dunder-slots
      "RUF026",  # duplicate-dunder-attribute
      "RUF028",  # direct-try-resume
      "RUF030",  # unnecessary-getattr
      "RUF032",  # datetime-min-max
      "RUF033",  # pathlib-symlink-iteration
      "RUF034",  # try-except-in-loop
      "RUF037",  # unnecessary-sorted-iteration
      "RUF041",  # useless-cast
      "RUF043",  # unnecessary-regex-literal
      "RUF048",  # lru-cache-on-mutable
      "RUF049",  # safe-exit-call
     "FA",      # flake8-future-annotations (from __future__ import annotations)
     "EXE",     # flake8-executable
     "FIX",     # flake8-fixme
     "INP",     # flake8-no-pep420
     "INT",     # flake8-gettext
     "LOG",     # logging-format
     "PD",      # pandas-vet
     "NPY",     # numpy-specific
     "PLE",     # pylint-error
     "TD",      # flake8-todos
    "A001",
    "A003",
    "A005",
    "A006",
    "B002",
    "B003",
    "B004",
    "B005",
    "B006",
    "B007",
    "B008",
    "B009",
    "B010",
    "B011",
    "B012",
    "B013",
    "B014",
    "B015",
    "B016",
    "B017",
    "B018",
    "B019",
    "B020",
    "B021",
    "B022",
    "B024",
    "B025",
    "B027",
    "B028",
    "B029",
    "B030",
    "B031",
    "B032",
    "B033",
    "B034",
    "B035",
    "C400",
    "C401",
    "C402",
    "C403",
    "C404",
    "C405",
    "C406",
    "C408",
    "C409",
    "C410",
    "C411",
    "C413",
    "C414",
    "C415",
    "C416",
    "C417",
    "C418",
    "C419",
    "LOG001",
    "LOG002",
    "LOG007",
    "LOG009",
    "N801",
    "N804",
    "N805",
    "N812",
    "N813",
    "N814",
    "N817",
    "N999",
    "PERF101",
    "PERF102",
    "PERF203",
    "PERF402",
    "PERF403",
    "PT001",
    "PT002",
    "PT003",
    "PT006",
    "PT007",
    "PT008",
    "PT009",
    "PT010",
    "PT011",
    "PT012",
    "PT013",
    "PT014",
    "PT015",
    "PT016",
    "PT017",
    "PT018",
    "PT019",
    "PT020",
    "PT021",
    "PT022",
    "PT023",
    "PT024",
    "PT025",
    "PT026",
    "PT027",
    "PT028",
    "S103",
    "S107",
    "S201",
    "S202",
    "S301",
    "S302",
    "S303",
    "S304",
    "S305",
    "S306",
    "S307",
    "S312",
    "S313",
    "S314",
    "S315",
    "S316",
    "S317",
    "S318",
    "S319",
    "S321",
    "S323",
    "S502",
    "S503",
    "S504",
    "S505",
    "S506",
    "S507",
    "S508",
    "S509",
    "S601",
    "S602",
    "S604",
    "S605",
    "S606",
    "S607",
    "S609",
    "S610",
    "S611",
    "S612",
    "S701",
    "TID251",
    "TID253",
]
ignore = [
    "E402",    # module-import-not-at-top (lazy imports intentional)
    "E501",    # line-too-long (handled by formatter)
    "E701",    # multiple-statements-on-one-line-colon (legacy style)
    "E702",    # multiple-statements-on-one-line-semicolon
    "E731",    # lambda assignment (permissive)
    "B023",    # function-uses-loop-variable (common closure pattern)
    "SIM102",  # collapsible-if (readability preference)
    "SIM108",  # simplify-if-else (ternary, not always clearer)
    "SIM113",  # enumerate-for-loop (manual counter ok)
    "COM812",  # handled by formatter (conflicts with ruff format)
    "G010",    # logging-warn vs logging-warning (redundant alias)
    "G004",    # logging-f-string (f-strings in logging intentional post print→logger conversion)
    "G101",    # logging-extra-attr (extra kwargs pattern is intentional)
     "D205",    # missing-blank-line-after-summary (no auto-fix for multi-line summaries)
     "PLC0415",  # import-outside-top-level (intentional lazy imports for circular deps)
    "PLR2004",  # magic-value-comparison (domain-specific thresholds)
    "D417",    # undocumented-param (69 violations, manual work required)
]

[tool.ruff.lint.per-file-ignores]
"src/models/**" = ["TC001", "TC002", "TC003", "PLR0913"]
"src/crawlers/base_naver_crawler.py" = ["ASYNC212", "RUF012"]
"src/crawlers/foreign_player_crawler.py" = ["RUF012", "F821"]
"src/crawlers/injury_crawler.py" = ["RUF012", "RUF001", "F821", "F401"]
"src/crawlers/manager_change_crawler.py" = ["RUF012", "RUF001", "F821"]
"src/crawlers/preview_crawler.py" = ["RUF012", "RUF001"]
"src/crawlers/ticket_crawler.py" = ["RUF012", "S501"]
"src/crawlers/game_mvp_crawler.py" = ["ASYNC212"]
"src/crawlers/game_detail_crawler.py" = ["ASYNC240", "RUF001", "D102", "D103", "D105"]
"src/crawlers/player_search_crawler.py" = ["ASYNC109", "ARG001"]
"src/crawlers/relay_crawler.py" = ["ASYNC109", "S324", "F821"]
"src/crawlers/schedule_crawler.py" = ["ASYNC109"]
"src/services/game_collection_service.py" = ["D102", "D103", "D105"]
"src/services/postgame_reconciliation_service.py" = ["D102", "D103", "D105"]
"src/repositories/player_repository.py" = ["RUF012", "PLR0913"]
"src/repositories/player_season_pitching_repository.py" = ["PLW0603"]
"src/repositories/safe_batting_repository.py" = ["PLW0603"]
"src/utils/team_mapping.py" = ["PLW0603"]
"src/utils/request_policy.py" = ["S311"]
"src/utils/throttle.py" = ["S311"]
"src/utils/alerting.py" = ["S310"]
"src/utils/compliance.py" = ["ASYNC240"]
"src/utils/lock.py" = ["PLW0127"]
"src/sources/relay/base.py" = ["PLW0127"]
"src/sources/relay/orchestrator.py" = ["PLW0127"]
"src/monitoring/sla_tracker.py" = ["PLW0127"]
"src/sources/relay/circuit_breaker.py" = ["RUF012"]
"src/cli/retry_daily_failures.py" = ["S603", "PLR0913"]
"src/cli/run_daily_update.py" = ["S603", "PLR0913", "RUF001"]
"src/cli/run_periodic_extras.py" = ["S603", "ASYNC221"]
"src/cli/run_all_crawlers.py" = ["ASYNC240", "RUF001"]
"src/cli/check_data_status.py" = ["S608", "PLR0913"]
"src/cli/db_healthcheck.py" = ["S608"]
"src/cli/backfill_starting_pitchers_from_stats.py" = ["S608"]
"src/db/engine.py" = ["S608"]
"src/cli/crawler_live_smoke.py" = ["PLR0913", "SLF001", "ARG001", "TRY300", "TRY301"]
"src/cli/crawler_selector_gate.py" = ["T201"]
"src/cli/data_integrity_checker.py" = ["T201"]
"src/cli/data_quality_regression_pack.py" = ["T201"]
"src/cli/diagnose_crawler_failure.py" = ["T201"]
"src/cli/health_check.py" = ["S608"]
"src/cli/monitor_data_freshness.py" = ["S608"]
"src/cli/rebuild_relay_events.py" = ["PLR0913"]
"src/cli/regenerate_game_stories.py" = ["PLR0913"]
"src/cli/regenerate_review_summaries.py" = ["PLR0913"]
"src/cli/smart_polling_gate.py" = ["T201", "TRY300"]
"src/cli/live_crawler.py" = ["TRY301", "SLF001", "ARG001", "TRY300"]
"src/cli/verify_sync_consistency.py" = ["S608"]
"src/crawlers/futures/futures_batting.py" = ["N806"]
"src/crawlers/operation_notice_naver_crawler.py" = ["SLF001"]
"src/crawlers/player_batting_all_series_crawler.py" = ["PLR0913", "RUF001"]
"src/crawlers/player_pitching_all_series_crawler.py" = ["PLR0913", "RUF001"]
"src/crawlers/operation_notice_doosan_crawler.py" = ["F821"]
"src/crawlers/operation_notice_lg_crawler.py" = ["F821"]
"src/parsers/ticket_parser.py" = ["T201"]
"src/cli/crawl_retire.py" = ["ASYNC230"]
"src/cli/recalc_player_stats.py" = ["FBT003"]
"src/repositories/game_helpers.py" = ["FURB171", "FBT003"]
"src/repositories/game_save.py" = ["FBT003"]
"src/repositories/team_event_repository.py" = ["FURB171"]
"src/repositories/stadium_food_repository.py" = ["SLF001"]
"src/utils/team_stats_helpers.py" = ["PLR0913", "ANN401"]
"src/sync/runtime_hydrator.py" = ["RUF012", "FURB171"]
"src/services/game_deduplication_service.py" = ["S608", "PLR0913"]
"src/services/hitter_page_fetcher.py" = ["S608"]
"src/services/p0_readiness.py" = ["S608", "PLR0913"]
"src/services/pbp_sh_sf_derivation.py" = ["S608"]
"src/sources/relay/importer.py" = ["SLF001"]
"src/sync/sync_base.py" = ["S608", "PLR0913", "RUF001"]
"src/sync/sync_games.py" = ["S608", "ARG002", "RUF001"]
"src/sync/sync_players.py" = ["ARG002"]
"src/sync/sync_stats.py" = ["S608", "A002"]
"src/aggregators/team_stat_aggregator.py" = ["SLF001", "PLR0913"]
"src/aggregators/ranking_aggregator.py" = ["PLR0913"]
"src/cli/calculate_rankings.py" = ["RUF001"]
"src/cli/crawl_staff_register.py" = ["RUF001"]
"src/cli/daily_highlight_batch.py" = ["RUF001"]
"src/cli/daily_preview_batch.py" = ["RUF001"]
"src/cli/daily_review_batch.py" = ["RUF001"]
"src/cli/daily_story_batch.py" = ["RUF001"]
"src/cli/ingest_mock_game_html.py" = ["RUF001"]
"src/cli/ingest_schedule_html.py" = ["RUF001"]
"src/cli/morning_pbp_report.py" = ["RUF001"]
"src/cli/recalc_season_stats.py" = ["RUF001"]
"src/crawlers/staff_register_crawler.py" = ["RUF001"]
"src/monitoring/crawl_gate.py" = ["RUF001"]
"src/parsers/game_detail_parser.py" = ["RUF001"]
"src/parsers/player_profile_parser.py" = ["RUF001"]
"src/parsers/text_transformer.py" = ["RUF001"]
"src/sync/sync_misc.py" = ["RUF001"]
"src/utils/player_season_stat_validation.py" = ["RUF001"]
"src/utils/type_helpers.py" = ["RUF001"]
"tests/**" = ["FBT001", "FBT002", "FBT003", "TC001", "TC002", "TC003", "SIM102", "SIM105", "SIM108", "SIM113", "SIM117", "PT", "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ANN401", "TRY003", "TRY300", "TRY301", "ARG", "T201", "T20", "ERA001", "RUF001", "FURB167", "RUF013", "DTZ001", "DTZ003", "DTZ005", "DTZ007", "DTZ011", "S608", "FLY002", "N", "SLF001", "PLR0913", "PLR0915", "FURB132", "RUF024", "RUF040", "PERF401", "BLE001", "F401", "I001", "RUF015", "RUF046", "RUF059", "EM101", "PYI034", "PYI", "RUF012", "PLW0603", "PLW0127", "S501", "S311", "S310", "S603", "S101", "PLR1722", "ASYNC109", "ASYNC212", "ASYNC240", "ASYNC230", "FURB110", "F821", "A002", "D100", "D104", "RUF034", "D101", "D102", "D103", "D105", "D107", "D400", "D415", "COM812", "D213", "S108", "INP001", "Q000", "B007", "PERF102", "S607"]
"scripts/**" = ["FBT001", "FBT002", "FBT003", "TC001", "TC002", "TC003", "SIM102", "SIM108", "SIM113", "PT", "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ANN401", "TRY003", "TRY300", "ARG", "T20", "ERA001", "RUF001", "I001", "FURB167", "RUF013", "DTZ001", "DTZ003", "DTZ005", "DTZ007", "DTZ011", "S608", "N", "SLF001", "PLR0913", "PLR0912", "PLR0911", "PLR0915", "FURB132", "RUF024", "RUF040", "BLE001", "RUF015", "RUF046", "RUF059", "EM101", "PYI034", "PYI", "RUF012", "PLW0603", "PLW0127", "S501", "S311", "S310", "S603", "S101", "PLR1704", "PLR1722", "D100", "D104", "ASYNC109", "ASYNC212", "ASYNC240", "ASYNC230", "FURB110", "A002", "D101", "D102", "D103", "D105", "D107", "D400", "D415", "COM812", "D213", "INP001", "EXE001", "PD002", "PLE1205", "Q000", "S607", "PERF102"]
"migrations/**" = ["FBT001", "FBT002", "TC001", "TC002", "TC003", "SIM102", "SIM108", "SIM113", "PT", "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ANN401", "TRY003", "TRY300", "ARG", "T20", "T201", "FURB167", "RUF013", "DTZ005", "S608", "N", "SLF001", "PLR0913", "PLR0912", "PLR0911", "PLR0915", "FURB132", "RUF024", "RUF040", "BLE001"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 65
show_missing = true
skip_empty = true
exclude_also = [
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pragma: no cover",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
